Add gender & name types aggregates

--- a/Dutch Name Stats.ipynb
+++ b/Dutch Name Stats.ipynb
@@ -78,7 +78,7 @@
    "outputs": [],
    "source": [
     "MIN_YEAR = 1880\n",
-    "MAX_YEAR = 2013\n",
+    "MAX_YEAR = 2014\n",
     "PERIOD_SIZE = 5\n",
     "lower_boundary_fcn = lambda x: (((x - 1) / PERIOD_SIZE) * \n",
     "                                PERIOD_SIZE + 1)\n",
@@ -199,7 +199,7 @@
    },
    "outputs": [],
    "source": [
-    "births = get_births(names_with_details, ['name_type', 'gender', 'name'],\n",
+    "births = get_births(names_with_details, ['name', 'gender', 'name_type'],\n",
     "                    ['year', 'value', 'approximation'])"
    ]
   },
@@ -230,7 +230,7 @@
    },
    "outputs": [],
    "source": [
-    "wide_name = temp_name.set_index(['name_type', 'gender', 'name'])['approximation'].apply(pd.Series)\n",
+    "wide_name = temp_name.set_index(['name', 'gender', 'name_type'])['approximation'].apply(pd.Series)\n",
     "wide_name"
    ]
   },
@@ -242,7 +242,7 @@
    },
    "outputs": [],
    "source": [
-    "pd.melt(wide_name.reset_index(), id_vars=['name_type', 'gender', 'name'], \n",
+    "pd.melt(wide_name.reset_index(), id_vars=['name', 'gender', 'name_type'], \n",
     "        var_name='ii', value_name='approximation').head()"
    ]
   },
@@ -268,29 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To compute the sum of the births for both name types, group over the gender, name and year, and sum the value and approximation. Append the resulting <code>DataFrame</code> to the original one."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "groups = births.groupby(['gender', 'name', 'year'], as_index=False)\n",
-    "births_totals = groups[['value', 'approximation']].sum()\n",
-    "births_totals['name_type'] = 'total'\n",
-    "births = births[births.name_type != 'total'].append(births_totals, \n",
-    "                                                    ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Approximate births are given for years that don't have exact data, so we would like to use approximations if no real values are given. Mortality rates are given for bins of 5 years, use <code>pd.cut</code> to assign bins for later use (IS THIS TRUE?)."
+    "Approximate births are given for years that don't have exact data, so we would like to use approximations if no real values are given. "
    ]
   },
   {
@@ -308,11 +286,74 @@
     "# Tidy up\n",
     "births.drop(['value', 'approximation'], axis=1, inplace=True)\n",
     "births['year'] = births['year'].astype(int)\n",
-    "births.rename(columns={'year': 'birth_year'}, inplace=True)\n",
+    "births.rename(columns={'year': 'birth_year'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To compute the sums of the births for both name types or both genders, group over the all other identifying columns, and sum the number of births. Append the resulting <code>DataFrame</code> to the original one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def append_sums(df, id_vars, value_vars, id_name, id_value):\n",
+    "    \"\"\"\n",
+    "    Append sum aggregates.\n",
+    "    \n",
+    "    :param df: DataFrame\n",
+    "    :param id_vars: Column(s) to use as identifier variables\n",
+    "    :param value_vars: Column(s) to sum\n",
+    "    :param agg_name: Column to aggregate \n",
+    "    :param agg_value: Value to use as identifier in aggregated column\n",
+    "    :returns DataFrame with aggregated sums appended\n",
+    "    \"\"\"\n",
+    "    totals = df.groupby(id_vars, as_index=False)[value_vars].sum()\n",
+    "    totals[id_name] = id_value\n",
+    "    df = df[df[id_name] != id_value].append(totals, ignore_index=True)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "births = append_sums(births, ['name', 'gender', 'birth_year'],\n",
+    "                     'n_born', 'name_type', 'total')\n",
+    "births = append_sums(births, ['name', 'name_type', 'birth_year'],\n",
+    "                     'n_born', 'gender', 'both')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mortality rates are given for bins of 5 years, use <code>pd.cut</code> to assign bins for later use (IS THIS TRUE?)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# Bin the years in bins ofo 5 years\n",
     "period_bins = range(min_period, max_period, PERIOD_SIZE)\n",
     "births['begin_period'] = pd.cut(births.birth_year, period_bins, \n",
-    "                                labels=period_bins[:-1], right=False)"
+    "                               labels=period_bins[:-1], right=False)"
    ]
   },
   {
@@ -349,16 +390,17 @@
    "outputs": [],
    "source": [
     "NAME = 'Anne'\n",
-    "id_cols = ['gender', 'name_type']\n",
+    "id_cols = ['name_type', 'gender']\n",
     "current_births = births[births.name == NAME]\n",
     "\n",
-    "fig, ax = plt.subplots(2, 3, figsize=(8, 4), sharex=True, sharey=True)\n",
-    "ax = ax.reshape(-1)  # Reshape the list to make it easy to iterate over\n",
+    "fig, ax = plt.subplots(3, 3, figsize=(10, 10), sharex=True, sharey=True)\n",
+    "ax = ax.reshape(-1)  # Reshape the list for easy iteraton\n",
     "for i_plot, (key, group) in enumerate(current_births.groupby(id_cols)):\n",
     "    group.plot(x='birth_year', y='n_born', ax=ax[i_plot],\n",
     "               title=' '.join(key), rot=45)\n",
     "    ax[i_plot].legend([])\n",
-    "    ax[i_plot].set_ylabel('# births')"
+    "    ax[i_plot].set_ylabel('# births')\n",
+    "fig.tight_layout()"
    ]
   },
   {
@@ -428,17 +470,6 @@
    },
    "outputs": [],
    "source": [
-    "mortality.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
     "interpolated_mortality = interpolate_age_proba(mortality)\n",
     "filled_mortality = fill_missing_periods(interpolated_mortality, period_bins)\n",
     "years_in_period = births[['birth_year', 'begin_period']].drop_duplicates()\n",
@@ -479,7 +510,7 @@
    },
    "outputs": [],
    "source": [
-    "yearly_mortality.head()"
+    "yearly_mortality.max()"
    ]
   },
   {
@@ -490,7 +521,7 @@
    },
    "outputs": [],
    "source": [
-    "valid_years = range(yearly_mortality.begin_period.min() + 100, yearly_mortality.begin_period.max() + 1)\n",
+    "valid_years = range(yearly_mortality.begin_period.min() + 100, yearly_mortality.begin_period.max() + 5)\n",
     "historical_survival_fcn = lambda x: get_historical_survival(x, valid_years)\n",
     "survival_rates = yearly_mortality.groupby('gender').apply(historical_survival_fcn)\n",
     "survival_rates.reset_index(level=0, inplace=True)"
@@ -504,7 +535,7 @@
    },
    "outputs": [],
    "source": [
-    "YEAR = 2011\n",
+    "YEAR = 2014\n",
     "rates = survival_rates[survival_rates.year == YEAR]"
    ]
   },
@@ -561,18 +592,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "export.groupby('name').count().hist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "collapsed": false
    },
    "outputs": [],
@@ -589,67 +608,6 @@
    "outputs": [],
    "source": [
     "#name_survival.to_csv('out/name_survival.csv', index=False, encoding='utf-8')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "aard = name_survival[(name_survival.name == 'Aad')\n",
-    "              & (name_survival.gender == 'male')]\n",
-    "aard.set_index(['name_type', 'gender', 'name', 'birth_year']).to_json('out/temp.json')\n",
-    "!cat out/temp.json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "pd.pivot_table(aard, index=['name', 'name_type', 'gender'], columns='birth_year', \n",
-    "               values=['n_born']).to_json('out/temp.json', orient='index')\n",
-    "!cat out/temp.json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "aard.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "aard.set_index(['name', 'gender']).to_dict()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "pd.pivot_table(aard, columns=['name', 'name_type', 'gender'], index='birth_year', \n",
-    "               values=['n_born']).to_dict()"
    ]
   },
   {
@@ -690,7 +648,7 @@
    "source": [
     "d = NestedDict()\n",
     "for key, group in name_survival.groupby(['name', 'gender', 'name_type']):\n",
-    "    d[key[0]][key[1]][key[2]]['data'] = group[['birth_year', 'n_born']].to_dict(orient='records')\n"
+    "    d[key[0]][key[1]][key[2]]['data'] = group[['birth_year', 'n_born', 'n_born_and_alive']].to_dict(orient='records')\n"
    ]
   },
   {
@@ -701,9 +659,7 @@
    },
    "outputs": [],
    "source": [
-    "import json\n",
-    "with \n",
-    "json.dump()"
+    "import json\n"
    ]
   },
   {
@@ -726,17 +682,53 @@
    },
    "outputs": [],
    "source": [
-    "\n"
+    "with open('out/names_export.json', 'w') as f:\n",
+    "    json.dump(d, f)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "<code>\n",
+    "[\n",
+    "    {\n",
+    "    'name': 'Aaf',\n",
+    "    'gender': 'female'\n",
+    "    'data':\n",
+    "        {\n",
+    "        'first': \n",
+    "            [\n",
+    "                {\n",
+    "                'year': 2015,\n",
+    "                'n_born': 24,\n",
+    "                'n_born_and_alive: 20,\n",
+    "                },\n",
+    "                {\n",
+    "                'year': 2010,\n",
+    "                'n_born': 10,\n",
+    "                'n_born_and_alive': 2,\n",
+    "                },\n",
+    "            ]\n",
+    "        'follow': \n",
+    "            [\n",
+    "                {\n",
+    "                }\n",
+    "                {\n",
+    "                }\n",
+    "            ]\n",
+    "        }\n",
+    "\n",
+    "            }\n",
+    "    },\n",
+    "    {\n",
+    "    'name': 'Anne' \n",
+    "    },\n",
+    "]\n",
+    "</code>"
+   ]
   },
   {
    "cell_type": "code",
@@ -746,7 +738,7 @@
    },
    "outputs": [],
    "source": [
-    "d"
+    "pd.DataFrame(d)"
    ]
   },
   {
@@ -818,7 +810,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "mongoimport -d names -c data --type csv --file names/out/name_survival.csv -headerline\n"
+    "<code>mongoimport -d names -c data --type csv --file names/out/name_survival.csv -headerline</code>\n",
+    "\n",
+    "<code>mongod --dbpath ~/temp/mongo_data/</code>\n"
    ]
   },
   {
