Add some plots with yearly birth stats

--- a/Dutch Name Stats.ipynb
+++ b/Dutch Name Stats.ipynb
@@ -8,6 +8,7 @@
    },
    "outputs": [],
    "source": [
+    "import matplotlib\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -102,8 +103,7 @@
    "outputs": [],
    "source": [
     "details = pd.read_json('data/details.json')\n",
-    "names_with_details = details[details.has_details]\n",
-    "names_with_details.head(2)"
+    "names_with_details = details[details.has_details]"
    ]
   },
   {
@@ -325,14 +325,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "births = append_sums(births, ['name', 'gender', 'birth_year'],\n",
     "                     'n_born', 'name_type', 'total')\n",
     "births = append_sums(births, ['name', 'name_type', 'birth_year'],\n",
-    "                     'n_born', 'gender', 'both')"
+    "                     'n_born', 'gender', 'any')"
    ]
   },
   {
@@ -401,6 +402,59 @@
     "    ax[i_plot].legend([])\n",
     "    ax[i_plot].set_ylabel('# births')\n",
     "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plotting the yearly birth totals clearly shows a small increase after the First and a big boom after the Second World War."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "yearly_births = pd.pivot_table(births, index='birth_year', \n",
+    "                               columns=['name_type', 'gender'], \n",
+    "                               values='n_born', aggfunc='sum')\n",
+    "\n",
+    "fig, ax = plt.subplots(2, 2, figsize=(10, 8), sharex='col', \n",
+    "                       sharey='col')\n",
+    "for i_row, name_type in enumerate(['first', 'follow']):\n",
+    "    (yearly_births.sum()[name_type] / 1E3).plot(kind='bar', rot=45, \n",
+    "                                                ax=ax[i_row, 0])\n",
+    "    ax[i_row, 0].set_ylabel('# births (thousands)')\n",
+    "    ax[i_row, 0].set_title('Total births for %s name' % name_type)\n",
+    "    \n",
+    "    (yearly_births[name_type] / 1E3).plot(ax=ax[i_row, 1])\n",
+    "    ax[i_row, 1].set_ylabel('# births (thousands)')\n",
+    "    ax[i_row, 1].set_title('Yearly births for %s name' % name_type)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dutch baby boomers are more likely to have more than one follow name compared to previous and later generations, as the ratio of total follow and first names shows. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "name_type_ratio = (yearly_births['follow'] / yearly_births['first'])\n",
+    "ax = name_type_ratio.plot(figsize=(8, 4))\n",
+    "ax.set_ylabel('Ratio')\n",
+    "ax.set_title(\"Ratio between # born with follow and first name\")"
    ]
   },
   {
@@ -483,6 +537,114 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "PERIOD = 1901\n",
+    "GENDER = 'female'\n",
+    "\n",
+    "plt.figure(figsize=(15, 8))\n",
+    "sel_mortality = mortality[(mortality.begin_period == PERIOD) & \n",
+    "                          (mortality.gender == GENDER)]\n",
+    "sel_filled = filled_mortality[(filled_mortality.gender == GENDER) & \n",
+    "                              (filled_mortality.begin_period == PERIOD)]\n",
+    "sel_mortality.set_index('age')['proba'].plot(style='-o')\n",
+    "sel_filled.set_index('age')['proba'].plot(style='-o')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "mortality.begin_period.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "(mortality.gender == gender).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "mortality[(mortality.gender == gender) & (mortality.begin_period == period)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 2, figsize=(15, 6))\n",
+    "\n",
+    "\n",
+    "for i_plot, gender in enumerate(['male', 'female']):\n",
+    "    for period  in [1936, 1941, 1946]:\n",
+    "        is_entry = ((mortality.gender == gender) &\n",
+    "                    (mortality.begin_period == period))\n",
+    "        mortality[is_entry].set_index('age').iloc[:10].proba.plot(style='-o', title=' '.join((gender, str(period))),\n",
+    "                                                  ax=ax[i_plot])\n",
+    "        ax[i_plot].legend(map(str, [1936, 1941, 1946]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    ")\n",
+    "years_in_period.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "years_in_period"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "def compute_survival_rate(df, birth_year):\n",
     "    is_born = (df.birth_year - df.age == birth_year)\n",
@@ -535,6 +697,27 @@
    },
    "outputs": [],
    "source": [
+    "survival_rates.to_csv('data/survival_rates.csv', index=False)\n",
+    "births.to_csv('data/births.csv', index=False, encoding='utf8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "YEAR = 2014\n",
     "rates = survival_rates[survival_rates.year == YEAR]"
    ]
@@ -550,6 +733,17 @@
     "name_survival = pd.merge(births, rates)\n",
     "name_survival['n_born_and_alive'] = name_survival.n_born * name_survival.survival_rate\n",
     "name_survival['n_dead'] = name_survival.n_born - name_survival.n_born_and_alive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "name_survival[name_survival.name_type == 'follow'].groupby('gender').n_born_and_alive.sum()"
    ]
   },
   {
