Switch from mortality rates to survival rates

--- a/Dutch Name Stats.ipynb
+++ b/Dutch Name Stats.ipynb
@@ -79,12 +79,7 @@
    "outputs": [],
    "source": [
     "MIN_YEAR = 1880\n",
-    "MAX_YEAR = 2014\n",
-    "PERIOD_SIZE = 5\n",
-    "lower_boundary_fcn = lambda x: (((x - 1) / PERIOD_SIZE) * \n",
-    "                                PERIOD_SIZE + 1)\n",
-    "min_period = lower_boundary_fcn(MIN_YEAR)\n",
-    "max_period = lower_boundary_fcn(MAX_YEAR + 2 * PERIOD_SIZE)"
+    "MAX_YEAR = 2014"
    ]
   },
   {
@@ -340,27 +335,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mortality rates are given for bins of 5 years, use <code>pd.cut</code> to assign bins for later use (IS THIS TRUE?)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Bin the years in bins ofo 5 years\n",
-    "period_bins = range(min_period, max_period, PERIOD_SIZE)\n",
-    "births['begin_period'] = pd.cut(births.birth_year, period_bins, \n",
-    "                               labels=period_bins[:-1], right=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "The end result looks like:"
    ]
   },
@@ -465,19 +439,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The life expectancy is given as the number of people surviving from a cohort of 100,000."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "mortality = pd.read_csv('data/levensverwachting_cbs.csv', delimiter=';', skiprows=2, encoding='utf-8')\n",
-    "mortality.columns = ['period', 'gender', 'age', 'proba']\n",
-    "mortality['age'] = mortality.age.str.replace(',', '.').str.split(' ').apply(lambda x: float(x[0]))\n",
-    "mortality['gender'] = mortality.gender.map({'Mannen': 'male', 'Vrouwen': 'female'})\n",
-    "mortality['begin_period'] = mortality.period.apply(lambda x: x[:4]).astype(int)\n",
-    "mortality.drop('period', axis=1, inplace=True)"
+    "survival = pd.read_csv('data/cbs_life_expectancy.csv', delimiter=';', skiprows=4, \n",
+    "                       names=['age', 'birth_year', 'gender', 'amount'], skipfooter=1)\n",
+    "survival.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert strings to floats and get rid of all the Dutch words."
    ]
   },
   {
@@ -488,97 +474,122 @@
    },
    "outputs": [],
    "source": [
-    "def interpolate_age_proba(df):\n",
-    "    groupby_cols = ['gender', 'begin_period']\n",
-    "    interpolate_axis = np.arange(0, df.age.max() + 0.5, 0.5)\n",
-    "    new_axis = interpolate_axis[::2]\n",
-    "    groups = df.groupby(groupby_cols)\n",
-    "    age_fcn = lambda x: interpolate_col(x, 'age', interpolate_axis, new_axis)\n",
-    "    interpolated = groups.apply(age_fcn)\n",
-    "    return interpolated.drop(groupby_cols, axis=1).reset_index()\n",
+    "survival['age'] = survival.age.str.split(' ').apply(lambda x: float(x[0]))\n",
+    "survival['gender'] = survival.gender.map({'Mannen': 'male', 'Vrouwen': 'female'})\n",
+    "survival.ix[(survival.amount == '.'), 'amount'] = None\n",
+    "survival['survival_rate'] = survival['amount'].astype(np.float) / 100000.\n",
+    "survival.drop('amount', axis=1, inplace=True)\n",
+    "survival.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "survival.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "MAX_AGE = 105\n",
     "\n",
     "\n",
-    "def interpolate_col(g, col, interpolate_axis, new_axis):\n",
-    "    reindex_g = g.set_index(col).reindex(interpolate_axis)\n",
-    "    interpolated_g = reindex_g.apply(pd.Series.interpolate)\n",
-    "    return interpolated_g.ix[new_axis]\n",
-    "\n",
-    "\n",
-    "def fill_missing_periods(df, new_axis):\n",
+    "def ffill_missing_years(df):\n",
     "    groupby_cols = ['gender', 'age']\n",
     "    groups = df.groupby(groupby_cols)\n",
-    "    filled = groups.apply(lambda x: fill_group(x, new_axis))\n",
-    "    return filled.reset_index(drop=True)\n",
+    "    filled = groups.apply(ffill_group)\n",
+    "    return filled.drop(groupby_cols, axis=1).reset_index(groupby_cols)\n",
+    "\n",
+    "def ffill_group(g):\n",
+    "    reindex_g = g.set_index('birth_year')\n",
+    "    filled_g = reindex_g.fillna(method='ffill')\n",
+    "    return filled_g.reset_index()\n",
+    "\n",
+    "def interpolate_age_proba(df):\n",
+    "    new_axis = range(0, MAX_AGE + 1)\n",
+    "    groupby_cols = ['gender', 'birth_year']\n",
+    "    groups = df.groupby(groupby_cols)\n",
+    "    age_fcn = lambda x: interpolate_col(x, 'age', new_axis)\n",
+    "    interpolated = groups.apply(age_fcn)\n",
+    "    interpolated[interpolated.survival_rate < 0] = 0\n",
+    "    return interpolated.drop(groupby_cols, axis=1).reset_index(groupby_cols)\n",
+    "\n",
+    "def interpolate_col(g, col, interpolate_axis):\n",
+    "    reindex_g = g.set_index(col).reindex(interpolate_axis)\n",
+    "    reindex_g.ix[max(interpolate_axis)] = 0\n",
+    "    interpolate_func = lambda x: pd.Series.interpolate(x, method='quadratic')\n",
+    "    interpolated_g = reindex_g.apply(interpolate_func)\n",
+    "    return interpolated_g.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "filled_survival = ffill_missing_years(survival)\n",
+    "interpolated_survival = interpolate_age_proba(filled_survival)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "interpolated_survival.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "DEMO_YEAR = 1990\n",
+    "def get_yearly_data(df, year):\n",
+    "    \"\"\"\n",
+    "    Get yearly data and pivot.\n",
     "    \n",
-    "def fill_group(g, new_axis):\n",
-    "    reindex_g = g.set_index('begin_period').reindex(new_axis)\n",
-    "    filled = reindex_g.fillna(method='ffill').reset_index()\n",
-    "    return filled"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "interpolated_mortality = interpolate_age_proba(mortality)\n",
-    "filled_mortality = fill_missing_periods(interpolated_mortality, period_bins)\n",
-    "years_in_period = births[['birth_year', 'begin_period']].drop_duplicates()\n",
-    "yearly_mortality = pd.merge(filled_mortality, years_in_period)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "PERIOD = 1901\n",
-    "GENDER = 'female'\n",
+    "    :param df: DataFrame\n",
+    "    :param year: Target year\n",
+    "    :returns Pivoted DataFrame with data from year\n",
+    "    \"\"\"\n",
+    "    temp = df[df.birth_year == year]\n",
+    "    data = temp.pivot(columns='gender', index='age', \n",
+    "                      values='survival_rate')\n",
+    "    return data\n",
     "\n",
-    "plt.figure(figsize=(15, 8))\n",
-    "sel_mortality = mortality[(mortality.begin_period == PERIOD) & \n",
-    "                          (mortality.gender == GENDER)]\n",
-    "sel_filled = filled_mortality[(filled_mortality.gender == GENDER) & \n",
-    "                              (filled_mortality.begin_period == PERIOD)]\n",
-    "sel_mortality.set_index('age')['proba'].plot(style='-o')\n",
-    "sel_filled.set_index('age')['proba'].plot(style='-o')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "mortality.begin_period.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "(mortality.gender == gender).sum()"
+    "year_original = get_yearly_data(survival, DEMO_YEAR)\n",
+    "year_filled = get_yearly_data(filled_survival, DEMO_YEAR)\n",
+    "year_interpolated = get_yearly_data(interpolated_survival, DEMO_YEAR)\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 3, figsize=(16, 4), sharex=True, sharey=True)\n",
+    "\n",
+    "title_suffix = ' - year: ' + str(DEMO_YEAR)\n",
+    "year_original.plot(ax=ax[0], title='original' + title_suffix)\n",
+    "year_filled.plot(ax=ax[1], title='forward' + title_suffix)\n",
+    "year_interpolated.plot(ax=ax[2], title='interpolated' + title_suffix)\n",
+    "for current_ax in ax:\n",
+    "    current_ax.set_ylabel('survival rate')\n",
+    "    current_ax.legend(loc='lower left', frameon=True)"
    ]
   },
   {
@@ -590,28 +601,11 @@
    },
    "outputs": [],
    "source": [
-    "mortality[(mortality.gender == gender) & (mortality.begin_period == period)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots(1, 2, figsize=(15, 6))\n",
-    "\n",
-    "\n",
-    "for i_plot, gender in enumerate(['male', 'female']):\n",
-    "    for period  in [1936, 1941, 1946]:\n",
-    "        is_entry = ((mortality.gender == gender) &\n",
-    "                    (mortality.begin_period == period))\n",
-    "        mortality[is_entry].set_index('age').iloc[:10].proba.plot(style='-o', title=' '.join((gender, str(period))),\n",
-    "                                                  ax=ax[i_plot])\n",
-    "        ax[i_plot].legend(map(str, [1936, 1941, 1946]))"
+    "TARGET_YEAR = 2014\n",
+    "assert (interpolated_survival.birth_year == TARGET_YEAR).any(), 'Invalid year'\n",
+    "is_alive_in_year = (interpolated_survival.age + \n",
+    "                    interpolated_survival.birth_year == TARGET_YEAR)\n",
+    "year_survival = interpolated_survival[is_alive_in_year]"
    ]
   },
   {
@@ -622,46 +616,7 @@
    },
    "outputs": [],
    "source": [
-    ")\n",
-    "years_in_period.shape\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "years_in_period"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def compute_survival_rate(df, birth_year):\n",
-    "    is_born = (df.birth_year - df.age == birth_year)\n",
-    "    survival_rate = (1 - df.ix[is_born, 'proba']).prod()\n",
-    "    return survival_rate\n",
-    "\n",
-    "def get_cohort_survival(df, year):\n",
-    "    survival_gen = ((birth_year, compute_survival_rate(df, birth_year)) \n",
-    "                    for birth_year in range(year - 100, year + 1))\n",
-    "    cohort_survival = pd.DataFrame(survival_gen, columns=['birth_year', 'survival_rate'])\n",
-    "    cohort_survival['year'] = year\n",
-    "    return cohort_survival\n",
-    "\n",
-    "def get_historical_survival(df, valid_years):\n",
-    "    historical_survival = pd.concat([get_cohort_survival(df, year) for year in valid_years], \n",
-    "                                    axis=0)\n",
-    "    return historical_survival"
+    "births.head()"
    ]
   },
   {
@@ -672,7 +627,7 @@
    },
    "outputs": [],
    "source": [
-    "yearly_mortality.max()"
+    "year_survival.head()"
    ]
   },
   {
@@ -683,54 +638,7 @@
    },
    "outputs": [],
    "source": [
-    "valid_years = range(yearly_mortality.begin_period.min() + 100, yearly_mortality.begin_period.max() + 5)\n",
-    "historical_survival_fcn = lambda x: get_historical_survival(x, valid_years)\n",
-    "survival_rates = yearly_mortality.groupby('gender').apply(historical_survival_fcn)\n",
-    "survival_rates.reset_index(level=0, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "survival_rates.to_csv('data/survival_rates.csv', index=False)\n",
-    "births.to_csv('data/births.csv', index=False, encoding='utf8')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "YEAR = 2014\n",
-    "rates = survival_rates[survival_rates.year == YEAR]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "name_survival = pd.merge(births, rates)\n",
+    "name_survival = pd.merge(births, year_survival)\n",
     "name_survival['n_born_and_alive'] = name_survival.n_born * name_survival.survival_rate\n",
     "name_survival['n_dead'] = name_survival.n_born - name_survival.n_born_and_alive"
    ]
@@ -743,43 +651,7 @@
    },
    "outputs": [],
    "source": [
-    "name_survival[name_survival.name_type == 'follow'].groupby('gender').n_born_and_alive.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "name_survival.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "value_cols = ['birth_year', 'n_born', 'n_born_and_alive', 'n_dead']\n",
-    "index_cols = ['name', 'name_type', 'gender'] \n",
-    "export = pd.DataFrame({e: name_survival.groupby(index_cols)[e].apply(list) for \n",
-    "                       e in value_cols}).reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "export.head()"
+    "name_survival[name_survival.name_type == 'first'].groupby('gender').n_born_and_alive.sum()"
    ]
   },
   {
@@ -841,8 +713,76 @@
    "outputs": [],
    "source": [
     "d = NestedDict()\n",
+    "ii = 0\n",
     "for key, group in name_survival.groupby(['name', 'gender', 'name_type']):\n",
-    "    d[key[0]][key[1]][key[2]]['data'] = group[['birth_year', 'n_born', 'n_born_and_alive']].to_dict(orient='records')\n"
+    "    if ii == 0:\n",
+    "        d[key[0]][key[1]][key[2]]['data'] = group[['birth_year', 'n_born', 'n_born_and_alive']].to_dict(orient='records')\n",
+    "    ii += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "l = []\n",
+    "for key, group in name_survival.groupby(['name', 'gender', 'name_type']):\n",
+    "    data = group[['birth_year', 'n_born', 'n_born_and_alive']].to_dict(orient='records')\n",
+    "    entry = dict(zip(('name', 'gender', 'name_type', 'data'), list(key) + [data]))\n",
+    "    l.append(entry)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(l)\n",
+    "df.to_csv('test.csv', index=False, encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!ls -lh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<code>\n",
+    "\n",
+    "sudo service mongodb stop\n",
+    "mongod --dbpath ~/temp/mongo_data/\n",
+    "\n",
+    "use names\n",
+    "db.data.remove()\n",
+    "\n",
+    "mongoimport -d names -c data --type json --file dutch-names/test.json\n",
+    "mongoimport -d names -c data --type csv test.csv -headerline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "group[['birth_year', 'n_born', 'n_born_and_alive']].to_dict(orient='records')"
    ]
   },
   {
@@ -932,72 +872,8 @@
    },
    "outputs": [],
    "source": [
-    "pd.DataFrame(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
     "group[['birth_year', 'n_born']].to_dict(orient='records')\n",
     "#pd.DataFrame.to_dict()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "aard.set_in"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "{name: {male: {first: data, follow: data}}, female: {first: data, follow: data}}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "name_survival[[name_survival.gender == 'male')]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "export.iloc[0].to_json('out/aad_male_first.json')"
    ]
   },
   {
@@ -1035,21 +911,10 @@
    "source": [
     "henk = name_survival[(name_survival.name == u'Daniël') & (name_survival.gender == 'male') &\n",
     "                     (name_survival.name_type == 'first')]\n",
-    "henk[['n_born', 'n_born_and_alive', 'n_dead']].plot()\n",
+    "henk.set_index('birth_year')[['n_born', 'n_born_and_alive', 'n_dead']].plot()\n",
     "henk = name_survival[(name_survival.name == u'Willem') & (name_survival.gender == 'male') &\n",
     "                     (name_survival.name_type == 'first')]\n",
-    "henk[['n_born', 'n_born_and_alive', 'n_dead']].plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "henk[['n_born', 'n_born_and_alive']].sum()"
+    "henk.set_index('birth_year')[['n_born', 'n_born_and_alive', 'n_dead']].plot()"
    ]
   },
   {
@@ -1064,23 +929,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "pd.DataFrame.to_json()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Ideas:\n",
     "<li> Total deaths per name\n",
-    "<li> Cum deaths vs cum born"
+    "<li> Cumulative deaths vs cumulative born"
    ]
   }
  ],
